_sass/_navigation.scss
.navbar {
    height: 80px;
    vertical-align: middle;

    .links {
        float: right;
    }

    .link {
        font-family: $header-font;
        font-size: $header-size;
        color: $text-color;
        margin-right: 20px;
        opacity: 0.4;
        float: right;
        transition: all 0.2s ease;
        line-height: 80px;
    }

    a:hover {
        opacity: 0.8;
        color: $accent-color;
    }

    .selected {
        opacity: 1;
        color: $accent-color;
    }

    .logo {
        display: inline-block;
        font-size: $header-size;
        color: $accent-color;
        font-size: $logo-size;
        font-weight: bold;
        margin-left: 20px;
        opacity: 1;
        line-height: 80px;
    }
}

// Mobile device support
@media only screen and (max-width: $mobile-viewport) {
    section {
        flex-direction: column;
        justify-content: center;
    }

    .navbar {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background-color: $floating-color;

        .logo {
            display: block;
            line-height: normal;
            margin-left: 0px;
        }

        .links {
            display: flex;
            float: none;
            flex-direction: row;
            justify-content: space-around;
            width: 100%;

            .link {
                float: none;
                line-height: normal;
                margin-right: 0px;
            }
        }
    }
}

